# baserow

./: .dockerignore  .editorconfig  .env.docker-dev.example  .env.example  .env.local-dev.example  .env.local.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  Caddyfile  Caddyfile.dev  README.md  app.json  changelog.md  docker-compose.all-in-one.yml  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.local-build.yml  docker-compose.no-caddy.yml  docker-compose.yml  eslint.config.mjs  heroku.Dockerfile  justfile  local.just.example
backend/: .flake8  .test_durations  Dockerfile  MANIFEST.in  Makefile  justfile  mypy.ini  pyproject.toml  pytest.ini
backend/docker/: docker-entrypoint.sh
backend/email_compiler/: README.md  baserowEmailCompiler.js  package.json
backend/flake8_plugins/: __init__.py
backend/flake8_plugins/flake8_baserow/: __init__.py  ai_imports.py  docstring.py  psycopg.py
backend/flake8_plugins/tests/: test_flake8_baserow_ai_imports.py  test_flake8_baserow_psycopg.py
backend/requirements/: base.in  base.txt  dev.in  dev.txt
backend/src/advocate/: __init__.py  addrvalidator.py  api.py  connection.py  monkeypatching.py  poolmanager.py  test_advocate.py
backend/src/baserow/: celery_singleton_backend.py  manage.py  middleware.py  throttling.py
backend/src/baserow/api/: authentication.py  decorators.py  errors.py  exceptions.py  extensions.py  pagination.py  serializers.py  sessions.py  urls.py  utils.py
backend/src/baserow/api/admin/: views.py
backend/src/baserow/api/captcha/: errors.py
backend/src/baserow/api/generative_ai/: errors.py
backend/src/baserow/api/jobs/: serializers.py  views.py
backend/src/baserow/api/search/: constants.py  serializers.py  urls.py  views.py
backend/src/baserow/api/settings/: serializers.py  views.py
backend/src/baserow/api/two_factor_auth/: views.py
backend/src/baserow/api/user/: errors.py  schemas.py  serializers.py  urls.py  views.py
backend/src/baserow/api/user_files/: views.py
backend/src/baserow/api/user_sources/: views.py
backend/src/baserow/config/: asgi.py  celery.py  db_routers.py  helpers.py  wsgi.py
backend/src/baserow/config/settings/: base.py  dev.py  heroku.py  test.py  utils.py
backend/src/baserow/contrib/automation/: application_types.py  apps.py  automation_dispatch_context.py  formula_importer.py  models.py  notification_types.py  permission_manager.py  search_types.py  types.py
backend/src/baserow/contrib/builder/: application_types.py  apps.py  formula_importer.py  handler.py  mixins.py  search_types.py  types.py
backend/src/baserow/contrib/dashboard/: apps.py  search_types.py
backend/src/baserow/contrib/database/: application_types.py  apps.py  search_base.py  search_types.py
backend/src/baserow/contrib/integrations/: tasks.py  utils.py
backend/src/baserow/core/: actions.py  apps.py  cache.py  constants.py  db.py  exceptions.py  feature_flags.py  handler.py  job_types.py  models.py  operations.py  output_parsers.py  pgvector.py  populate.py  posthog.py  psycopg.py  receivers.py  registries.py  registry.py  sentry.py  types.py  utils.py
backend/src/baserow/core/action/: handler.py
backend/src/baserow/core/app_auth_providers/: handler.py  types.py
backend/src/baserow/core/auth_provider/: models.py
backend/src/baserow/core/captcha/: exceptions.py  handler.py  provider_types.py  registries.py  settings_data_type.py
backend/src/baserow/core/formula/: __init__.py  argument_types.py  field.py  registries.py  runtime_formula_types.py  serializers.py  types.py  validator.py
backend/src/baserow/core/generative_ai/: exceptions.py  generative_ai_model_types.py  registries.py
backend/src/baserow/core/import_export/: handler.py
backend/src/baserow/core/jobs/: handler.py  mixins.py  registries.py  tasks.py
backend/src/baserow/core/management/: utils.py
backend/src/baserow/core/mcp/: __init__.py  registries.py  sse.py
backend/src/baserow/core/migrations/: 0108_alter_userfile_unique.py  0109_userfile_deleted_at.py  0110_totpusedcode.py  0111_alter_twofactorauthprovidermodel_user.py  0112_alter_userprofile_language.py  (+2 more)
backend/src/baserow/test_utils/: helpers.py  pytest_conftest.py
backend/src/baserow/throttling/: __init__.py  blacklist.py  exceptions.py  handler.py  middleware.py  utils.py
backend/src/baserow/ws/: tasks.py
backend/templates/: ab-testing.json  ab_agency_theme.json  ab_baserow_theme.json  ab_coral_theme.json  ab_corporate_theme.json  ab_eclipse_theme.json  ab_education_theme.json  ab_finance_theme.json  ab_forest_theme.json  ab_healthcare_theme.json  ab_ivory_theme.json  ab_lavender_theme.json  ab_legal_theme.json  ab_luxury_theme.json  ab_midnight_theme.json  ab_mint_theme.json  ab_neon_theme.json  ab_ocean_theme.json  ab_realestate_theme.json  ab_slate_theme.json  ab_startup_theme.json  ab_sunset_theme.json  ab_tech_theme.json  ab_terracotta_theme.json  inspections-compliance.json  intake-qualification.json  password-reset.json  program-management-kpi.json  project-management.json  task-management.json  work-management-platform.json
backend/tests/: conftest.py
backend/tests/baserow/api/: test_api_utils.py  test_jwt_user_cache_perf.py  test_throttle_blacklist.py  test_user_cache.py
backend/tests/baserow/config/: test_celery_config.py  test_read_replica_router.py
backend/tests/baserow/core/: test_basic_permissions.py  test_core_baserow_formula_migration.py  test_core_db.py  test_core_handler.py  test_core_utils.py  test_posthog.py  test_settings_cache.py  test_throttling.py
backend/tests/baserow/formula/: test_formula_execution_visitor.py  test_formula_validation_visitor.py
backend/tests/baserow/performance/: test_asgi_concurrency_limit.py  test_formula_performance.py  test_public_sharing_performance.py
backend/tests/baserow/ws/: test_ws_signals.py
premium/backend/: pyproject.toml
premium/backend/src/baserow_premium/: apps.py  ical_utils.py  models.py  permission_manager.py  plugins.py  populate.py
premium/backend/tests/baserow_premium_tests/: conftest.py  fixtures.py  test_ical_utils.py
(+2853 files in other folders)
