[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baserow"
authors = [{ name = "Bram Wiepjes (Baserow)", email = "bram@baserow.io" }]
description = """Baserow is an open source no-code database tool and Airtable \
                    alternative. Easily create a relational database without any \
                    technical expertise. Build a table and define custom fields \
                    like text, number, file and many more."""
license = { file = "../LICENSE" }
requires-python = "==3.11.*"
dynamic = ["version"]
classifiers = []

dependencies = [
    "django==5.0.14",
    "django-cors-headers==4.3.1",
    "djangorestframework==3.15.1",
    "djangorestframework-simplejwt==5.3.1",
    "psycopg2-binary==2.9.10",
    "Faker==25.0.1",
    "Twisted==24.11.0",
    "gunicorn==23.0.0",
    "uvicorn[standard]==0.34.2",
    "websockets==12.0",
    "requests==2.32.5",
    "itsdangerous==2.2.0",
    "Pillow==10.4.0",
    "drf-spectacular==0.28.0",
    "asgiref==3.8.1",
    "channels[daphne]==4.0.0",
    "channels-redis==4.1.0",
    "celery[redis]==5.5.3",
    "django-redis==5.4.0",
    "django-celery-email==3.0.0",
    "advocate==1.0.0",
    "zipp==3.19.1",
    "unicodecsv==0.14.1",
    "django-celery-beat==2.6.0",
    "celery-redbeat==2.2.0",
    "flower==2.0.1",
    "service-identity==24.1.0",
    "regex==2025.10.23",
    "antlr4-python3-runtime==4.9.3",
    "tqdm==4.66.4",
    "boto3==1.40.40",
    "django-storages==1.14.3",
    "django-storages[azure]==1.14.3",
    "django-storages[google]==1.14.3",
    "django-health-check==3.18.2",
    "psutil==5.9.8",
    "dj-database-url==2.1.0",
    "redis==5.2.1",
    "pgvector==0.4.1",
    "pysaml2==7.5.0",
    "validators==0.28.1",
    "requests-oauthlib==2.0.0",
    "opentelemetry-api==1.37.0",
    "opentelemetry-exporter-otlp-proto-http==1.37.0",
    "opentelemetry-instrumentation==0.58b0",
    "opentelemetry-instrumentation-django==0.58b0",
    "opentelemetry-instrumentation-aiohttp-client==0.58b0",
    "opentelemetry-instrumentation-asgi==0.58b0",
    "opentelemetry-instrumentation-botocore==0.58b0",
    "opentelemetry-instrumentation-celery==0.58b0",
    "opentelemetry-instrumentation-dbapi==0.58b0",
    "opentelemetry-instrumentation-grpc==0.58b0",
    "opentelemetry-instrumentation-logging==0.58b0",
    "opentelemetry-instrumentation-redis==0.58b0",
    "opentelemetry-instrumentation-psycopg2==0.58b0",
    "opentelemetry-instrumentation-psycopg==0.58b0",
    "opentelemetry-instrumentation-requests==0.58b0",
    "opentelemetry-instrumentation-wsgi==0.58b0",
    "opentelemetry-proto==1.37.0",
    "opentelemetry-sdk==1.37.0",
    "opentelemetry-semantic-conventions==0.58b0",
    "opentelemetry-util-http==0.58b0",
    "Brotli==1.1.0",
    "loguru==0.7.2",
    "django-cachalot==2.6.2",
    "celery-singleton==0.3.1",
    "posthog==7.0.1",
    "prosemirror @ https://github.com/fellowapp/prosemirror-py/archive/refs/tags/v0.3.5.zip",
    "rich==13.7.1",
    "tzdata==2025.2",
    "sentry-sdk==2.29.1",
    "typing_extensions>=4.14.1",
    "ollama==0.1.9",
    "langchain==0.3.27",
    "langchain-openai==0.3.35",
    "openai==2.2.0",
    "anthropic==0.75.0",
    "mistralai==1.1.0",
    "icalendar==5.0.12",
    "jira2markdown==0.3.7",
    "openpyxl==3.1.5",
    "zipstream-ng==1.8.0",
    "mcp==1.9.4",
    "django-cte==1.3.3",
    "genson==1.3.0",
    "pyotp==2.9.0",
    "qrcode==8.2",
    "udspy==0.1.8",
]

[project.urls]
Homepage = "https://baserow.io"
"Bug Tracker" = "https://github.com/baserow/baserow/issues/"
Documentation = "https://baserow.io/user-docs"
Support = "https://community.baserow.io/"
Changelog = "https://github.com/baserow/baserow/blob/develop/changelog.md"

[project.scripts]
baserow = "baserow.manage:main"

[dependency-groups]
dev = [
    "flake8==7.0.0",
    "pytest==8.2.0",
    "pytest-django==4.8.0",
    "pytest-env==1.1.3",
    "pytest-asyncio==0.23.6",
    "pytest-ordering==0.6",
    "pytest-mock==3.14.0",
    "pytest-icdiff==0.9",
    "freezegun==1.5.0",
    "responses==0.25.0",
    "watchdog==4.0.0",
    "argh==0.31.2",
    "black==23.3.0",
    "pyinstrument==4.6.2",
    "pyfakefs==5.4.1",
    "pytest-xdist==3.6.1",
    "django-silk==5.1.0",
    "django-extensions==3.2.3",
    "snoop==0.4.3",
    "openapi-spec-validator==0.7.2",
    "pytest-html==4.1.1",
    "coverage==7.5.1",
    "pytest-split==0.8.2",
    "bandit==1.7.8",
    "autopep8==2.1.0",
    "pytest-unordered==0.6.0",
    "debugpy==1.8.1",
    "backports.cached-property==1.0.2",
    "httpretty==1.1.4",
    "graphviz==0.20.3",
    "pytest-cov==5.0.0",
    "django-stubs==1.16.0",
    "django-stubs-ext==0.8.0",
    "mypy==1.10.0",
    "mypy-extensions==1.0.0",
    "isort==5.13.2",
    "ipython",
    "fakeredis[lua]==2.23.2",
    "pytest-retry==1.7.0",
    "pytest-testmon==2.1.3",
    "ipdb",
    "build",
    "rust-just>=1.43.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/baserow/version.py"
pattern = "VERSION = \"(?P<version>[^\"]+)\""

[tool.hatch.build.targets.wheel]
packages = ["src/baserow"]

[tool.black]
exclude = """
/(
  | migrations
  | generated
)/
"""
target-version = ["py311"]
required-version = "23"

[tool.isort]
profile = "black"
skip = ["migrations", "generated"]

[tool.uv]
package = true
environments = ["sys_platform == 'linux'", "sys_platform == 'darwin'"]

[tool.uv.workspace]
members = ["../premium/backend", "../enterprise/backend"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "baserow.config.settings.test"
python_files = ["test_*.py", "*_test.py"]
pythonpath = [
    "tests",
    "../premium/backend/tests",
    "../enterprise/backend/tests",
]
