[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baserow"
authors = [{ name = "Bram Wiepjes (Baserow)", email = "bram@baserow.io" }]
description = """Baserow is an open source no-code database tool and Airtable \
                    alternative. Easily create a relational database without any \
                    technical expertise. Build a table and define custom fields \
                    like text, number, file and many more."""
license = { file = "../LICENSE" }
requires-python = "==3.14.*"
dynamic = ["version"]
classifiers = []

dependencies = [
    "django==5.2.11",
    "django-cors-headers==4.9.0",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "psycopg2-binary==2.9.11",
    "Faker==40.1.0",
    "Twisted==25.5.0",
    "gunicorn==23.0.0",
    "uvicorn[standard]==0.40.0",
    "websockets==15.0.1",
    "requests==2.32.5",
    "itsdangerous==2.2.0",
    "Pillow==12.1.1",
    "drf-spectacular==0.29.0",
    "asgiref==3.11.0",
    "channels[daphne]==4.3.2",
    "channels-redis==4.3.0",
    "celery[redis]==5.6.2",
    "django-redis==6.0.0",
    "django-celery-email-reboot==4.2.0",
    "zipp==3.23.0",
    "unicodecsv==0.14.1",
    "django-celery-beat==2.8.1",
    "celery-redbeat==2.3.3",
    "flower==2.0.1",
    "service-identity==24.2.0",
    "regex==2025.11.3",
    "antlr4-python3-runtime==4.9.3",
    "tqdm==4.67.1",
    "boto3==1.42.21",
    "django-storages==1.14.6",
    "django-storages[azure]==1.14.6",
    "django-storages[google]==1.14.6",
    "django-health-check==3.20.8",
    "psutil==7.2.1",
    "dj-database-url==3.1.0",
    "redis==6.4.0",
    "pgvector==0.4.2",
    "pysaml2==7.5.4",
    "validators==0.35.0",
    "requests-oauthlib==2.0.0",
    "opentelemetry-api==1.39.1",
    "opentelemetry-exporter-otlp-proto-http==1.39.1",
    "opentelemetry-instrumentation==0.60b1",
    "opentelemetry-instrumentation-django==0.60b1",
    "opentelemetry-instrumentation-aiohttp-client==0.60b1",
    "opentelemetry-instrumentation-asgi==0.60b1",
    "opentelemetry-instrumentation-botocore==0.60b1",
    "opentelemetry-instrumentation-celery==0.60b1",
    "opentelemetry-instrumentation-dbapi==0.60b1",
    "opentelemetry-instrumentation-grpc==0.60b1",
    "opentelemetry-instrumentation-logging==0.60b1",
    "opentelemetry-instrumentation-redis==0.60b1",
    "opentelemetry-instrumentation-psycopg2==0.60b1",
    "opentelemetry-instrumentation-psycopg==0.60b1",
    "opentelemetry-instrumentation-requests==0.60b1",
    "opentelemetry-instrumentation-wsgi==0.60b1",
    "opentelemetry-proto==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-semantic-conventions==0.60b1",
    "opentelemetry-util-http==0.60b1",
    "Brotli==1.2.0",
    "loguru==0.7.3",
    "django-cachalot==2.8.0",
    "celery-singleton==0.3.1",
    "posthog==7.4.2",
    "prosemirror==0.5.2",
    "rich==14.3.2",
    "tzdata==2025.3",
    "sentry-sdk==2.52.0",
    "typing_extensions>=4.14.1",
    "ollama==0.6.1",
    "langchain==0.3.27",
    "langchain-openai==0.3.35",
    "openai==2.14.0",
    "anthropic==0.77.0",
    "mistralai==1.1.0",
    "icalendar==6.3.2",
    "jira2markdown==0.5",
    "openpyxl==3.1.5",
    "zipstream-ng==1.9.0",
    "mcp==1.26.0",
    "django-cte==1.3.3",
    "genson==1.3.0",
    "pyotp==2.9.0",
    "qrcode==8.2",
    "udspy==0.1.8",
    "netifaces==0.11.0",
    "requests-futures>=1.0.2",
]

[project.urls]
Homepage = "https://baserow.io"
"Bug Tracker" = "https://github.com/baserow/baserow/issues/"
Documentation = "https://baserow.io/user-docs"
Support = "https://community.baserow.io/"
Changelog = "https://github.com/baserow/baserow/blob/develop/changelog.md"

[project.scripts]
baserow = "baserow.manage:main"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest==8.4.2",
    "pytest-django==4.11.1",
    "pytest-env==1.2.0",
    "pytest-asyncio==1.3.0",
    "pytest-ordering==0.6",
    "pytest-mock==3.15.1",
    "pytest-icdiff==0.9",
    "freezegun==1.5.5",
    "responses==0.25.8",
    "watchdog==6.0.0",
    "argh==0.31.3",
    "pyinstrument==5.1.2",
    "pyfakefs==6.0.0",
    "pytest-xdist==3.8.0",
    "django-silk==5.4.3",
    "django-extensions==4.1",
    "snoop==0.6.0",
    "openapi-spec-validator==0.7.2",
    "pytest-html==4.1.1",
    "coverage==7.13.1",
    "pytest-split==0.11.0",
    "pytest-unordered==0.7.0",
    "debugpy==1.8.20",
    "backports.cached-property==1.0.2",
    "graphviz==0.21",
    "pytest-cov==7.0.0",
    "django-stubs==5.2.8",
    "django-stubs-ext==5.2.9",
    "mypy==1.19.1",
    "mypy-extensions==1.1.0",
    "ipython",
    "fakeredis[lua]==2.33.0",
    "pytest-retry==1.7.0",
    "pytest-testmon==2.2.0",
    "ipdb",
    "build",
    "rust-just>=1.46.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/baserow/version.py"
pattern = "VERSION = \"(?P<version>[^\"]+)\""

[tool.hatch.build.targets.wheel]
packages = ["src/baserow"]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = ["**/migrations/**", "**/generated/**"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E731",   # lambda assignment (common pattern)
    "S101",   # use of assert (fine in tests)
    "S105",   # possible hardcoded password (false positives on variable names)
    "S110",   # try-except-pass (intentional in some cases)
    "S112",   # try-except-continue (intentional in some cases)
    "S311",   # pseudo-random generators (not for crypto)
    "S611",   # use of exec (intentional in some places)
    "F541",   # f-string without placeholders (common pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "S105", "S106", "S608", "F841"]
"../**/tests/**/*" = ["S101", "S105", "S106", "S608", "F841"]
"src/baserow/test_utils/**/*" = ["S101", "S105", "S106", "S608", "F841"]
"src/baserow/config/settings/local.py" = ["S105"]

[tool.ruff.lint.isort]
known-first-party = ["baserow", "baserow_premium", "baserow_enterprise"]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
django = ["django"]

[tool.uv]
package = true
environments = ["sys_platform == 'linux'", "sys_platform == 'darwin'"]

[tool.uv.workspace]
members = ["../premium/backend", "../enterprise/backend"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "baserow.config.settings.test"
python_files = ["test_*.py", "*_test.py"]
pythonpath = [
    "tests",
    "../premium/backend/tests",
    "../enterprise/backend/tests",
]
