[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baserow-premium"
authors = [{ name = "Bram Wiepjes (Baserow)", email = "bram@baserow.io" }]
description = """Baserow is an open source no-code database tool and Airtable \
                    alternative. Easily create a relational database without any \
                    technical expertise. Build a table and define custom fields \
                    like text, number, file and many more."""
# mixed license
license = { file = "../LICENSE" }
requires-python = "==3.14.*"
version = "2.1.0"
classifiers = []

[project.urls]
Homepage = "https://baserow.io"
"Bug Tracker" = "https://github.com/baserow/baserow/issues/"
Documentation = "https://baserow.io/user-docs"
Support = "https://community.baserow.io/"
Changelog = "https://github.com/baserow/baserow/blob/develop/changelog.md"

[tool.hatch.build.targets.wheel]
packages = ["src/baserow_premium"]

[tool.black]
exclude = '''
/(
  | migrations
  | generated
)/
'''
